@startuml
title NavigationExecutor Subsystem Class Diagram
namespace fast::rf {
  namespace messages {
  }
  namespace NavigationSystem {
    package NavigationExecutorSubsystem #LightYellow;line:blue {
      namespace DriveExecutor #LimeGreen {
        interface IDriveExecutorProcess #LimeGreen
        class TankDriveExecutorProcess #LimeGreen
        TankDriveExecutorProcess -up-|> IDriveExecutorProcess
      }
      namespace TrajectoryController #LimeGreen {
        interface ITrajectoryControllerProcess #LimeGreen
        class BasicTrajectoryControllerProcess #LimeGreen
        BasicTrajectoryControllerProcess -up-|> ITrajectoryControllerProcess
      }
      namespace TrajectorySelector {
        interface ITrajectorySelectorProcess
      }
    }
  }
}
@enduml